--- a/templates/covid.html
+++ b/templates/covid.html
@@ -77,7 +77,7 @@
                                         <li><a href="#about" class="btn btn-transparent scrollto"><span>Acerca de COVID-19</span><em class="icon ni ni-arrow-right"></em></a></li>
                                     </ul>
 
-                                    <div class="status">
+                                    <!--<div class="status">
                                         <div class="row">
                                             <div class="col-sm-12 col-12">
                                             <h5 class="subtitle">Casos activos en Nicaragua</h4>
@@ -114,7 +114,7 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                    </div><!-- .status -->
+                                    </div>--><!-- .status -->
                                 </div><!-- .content -->
                             </div><!-- .nk-banner-block -->
                         </div><!-- .col -->
